--- a/src/testPetaGA.html
+++ b/src/testPetaGA.html
@@ -8,8 +8,8 @@
     
     <script src="http://127.0.0.1:5500/src/googleAnalytics/global/ga_constants.js"></script>
     <script src="http://127.0.0.1:5500/src/googleAnalytics/petaUS/peta/gaBase.js"></script>
-
-    <p> PETA GA Configuration</p>
+    
+    <h3> PETA LOCAL GA Configuration Test</h3>
 </head>
 <body>
 
